# ScriptWriter

./: .env.example  .gitignore  AGENT.md  README.md  README_ZH.md  pyproject.toml  requirements.txt  test_graph.py  todo-auto-screenwriter.md
app/: main.py
app/agents/: critic.py  planner.py  tools.py  writer.py
app/api/: endpoints.py
app/core/: state.py
app/memory/: milvus_store.py
app/workflow/: graph.py
data/chroma/: chroma.sqlite3
docs/: README.md
docs/en/: README.md  api-reference.md  architecture.md  development.md  operations.md  security-model.md
docs/plans/: 2026-03-03-auto-screenwriter-architecture-v2.md  2026-03-03-auto-screenwriter-design.md  2026-03-03-auto-screenwriter-mvp-plan.md  2026-03-04-core-orchestration-state-store-implementation-plan.md  2026-03-05-rag-storage-and-retrieval-plan.md  2026-03-09-single-agent-long-project-redesign-design.md  2026-03-09-single-agent-long-project-redesign-implementation-plan.md  2026-03-10-knowledge-hybrid-retrieval-design.md  2026-03-10-knowledge-hybrid-retrieval-implementation-plan.md
docs/zh/: README.md  api-reference.md  architecture.md  development.md  operations.md  security-model.md
scripts/: rebuild_knowledge_index.py  smoke_graph.py
skills/: action_rules.md  dialogue_rules.md  hollywood_format.md
skills/public/action_rules/: SKILL.md
skills/public/dialogue_rules/: SKILL.md
skills/public/hollywood_format/: SKILL.md
src/scriptwriter/: main.py
src/scriptwriter/agent/: __init__.py  models.py  prompts.py  service.py
tests/scriptwriter/: test_architecture_layout.py  test_bootstrap.py
(+112 files in other folders)
